force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/RS_Einstein_Sentiment_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>RS Einstein Sentiment Configuration</label>
    <pluralLabel>RS Einstein Sentiment Configurations</pluralLabel>
</CustomObject>