force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Case_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_Name__c</fullName>
    <label>Case Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>