force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Customer_sentiments__c.field-meta.xml
<CustomField>
    <fullName>Customer_sentiments__c</fullName>
    <label>Customer sentiments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>