force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Interaction_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Lookup_Field__c</fullName>
    <label>Interaction Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>