force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Interaction_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Object_API__c</fullName>
    <label>Interaction Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>