force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Sentiment_Field_to_analyse__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Field_to_analyse__c</fullName>
    <label>Sentiment Field to analyse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>