force-app/main/default/objects/RS_Einstein_Sentiment_Configuration__mdt/fields/Sentiment_score_field_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_score_field_to_Update__c</fullName>
    <label>Sentiment score field to Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>